# Cerberus

./: .config.just  .justfile  Cargo.toml  README.md  ROADMAP.txt  go.mod  go.sum  main.go
.just/: go.conf
cmd/: cmdClone.go  cmdDescribe.go  cmdGuard.go  cmdIdentity.go  cmdLs.go  cmdReadme.go  cmdRemember.go  cmdRoadmap.go  cmdStats.go  cmdStatus.go  cmdSync.go  customRepoDescribe.go  customRepoRemember.go  customRepoStats.go  customTokei.go  docs.json  root.go  utilAverageCommit.go  utilChangeDir.go  utilCheckErr.go  utilClone.go  utilCloneGit.go  utilCommitFrecuency.go  utilCommon.go  utilCountCommits.go  utilCreateDir.go  utilCreateFile.go  utilDescribe.go  utilDetectLicense.go  utilExample.go  utilExecCmd.go  utilGenerateMD.go  utilGetRemote.go  utilHandleGit.go  utilHelp.go  utilListDirs.go  utilListFiles.go  utilLogNotFound.go  utilLs.go  utilParseReadme.go  (+9 more)
src/: cli.rs  cmd.rs  main.rs  util.rs
src/cmd/: explore.rs  manage.rs
