[package]
name = "cerberus"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Cerberus"
readme = "README.md"
description = ""
edition = "2024"


[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
colored = "2"
csv = "1"
chrono = "0.4"
walkdir = "2"
