[package]
name = "cerberus"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Cerberus"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
csv = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
